--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
         <div class="cover-container"> 
 
           <div class="inner cover">
-            <h1 class="cover-heading"><img class="initial animated fadeInUpBig" src="assets/img/rippleThrobber.png"></h1>
-            <h1 class="cover-heading"><img class="loading throbber" src="assets/img/rippleThrobber.png"></h1>
-            <h1 class="cover-heading"><img class="loaded animated fadeOutUpBig" src="assets/img/rippleThrobber.png"></h1>
+            <h1 class="cover-heading"><i class="logo icon-logo initial animated fadeInUpBig"></i></h1>
+            <h1 class="cover-heading"><i class="logo icon-logo loading throbber"></i></h1>
+            <h1 class="cover-heading"><i class="logo icon-logo loaded animated fadeOutUpBig"></i></h1>
             
           </div>
           
