--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <div class="inner cover">
             <h1 class="cover-heading"><i class="logo icon-logo initial animated fadeInUpBig"></i></h1>
             <h1 class="cover-heading"><i class="logo icon-logo loading throbber"></i></h1>
-            <h1 class="cover-heading"><i class="logo icon-logo loaded animated fadeOutUpBig"></i></h1>
+            <h1 class="cover-heading"><i class="logo icon-logo loaded animated2 fadeOutUpBig"></i></h1>
             
           </div>
           
