cross browser nonsense

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
         <div class="cover-container"> 
 
           <div class="inner cover">
-        	<h1 class="cover-heading"><img class="logo initial animated fadeInUpBig" src="assets/img/main.png"></h1>
-            <h1 class="cover-heading"><img class="logo loading throbber" src="assets/img/main.png"></h1>
-         	<h1 class="cover-heading"><img class="logo loaded animated2 fadeOutUpBig" src="assets/img/main.png"></h1>
+        	<h1 class="initial"><img class="animated fadeInUpBig" src="assets/img/main.png"></h1>
+            <h1 class="loading"><img class="throbber" src="assets/img/main.png"></h1>
+         	<h1 class="loaded"><img class="animated2 fadeOutUpBig" src="assets/img/main.png"></h1>
           </div>
           
         </div>
